presenters/dialog/style.less
.dialog {
	// font-size: .9em;
	min-height: 1em;
	display: grid;
	grid-template-areas: 
	'icon'
	'title'
	'msg'
	'btns';
	
	.d-icon { grid-area: icon }
	.d-title { grid-area: title }
	.d-msg { grid-area: msg }
	.d-btns { grid-area: btns }
	
	.d-title {
		min-height: 0;
		margin: 0;
	}
	
	.d-icon > b-icon {
		
		&:not(.inline) {
			width: 100%;
			text-align: center;
			font-size: 2em;
			display: block;
		}
		
		&.inline {
			margin-right: .5rem;
		}
		
		&.red { color: var(--red); border-color: var(--red); }
		&.orange { color: var(--orange); border-color: var(--orange); }
		&.blue { color: var(--blue); border-color: var(--blue); }
		&.green { color: var(--green); border-color: var(--green); }
		&.brown { color: var(--brown); border-color: var(--brown); }
	}

	.d-icon > b-spinner {
		--size: 2em;
	}
	
	.d-title:not(:empty) {
		// background: rgba(0,0,0,.05);
		font-size: 1.3em;
		padding: .75em .75em 0;
		// font-weight: normal;
	}
	
	.d-msg:not(:empty) {
		padding: .25rem 1rem .5rem;
		line-height: 1.2em;
		color: var(--b-dialog-msg-color, rgba(0,0,0,.5));
		text-align: left;
		
		form-control {
			text-align: left;
			color: #222;
			width: 100%;
			margin-top: .5em;
		}
		
		form-control[material="outline"] {
			margin-top: 1em;
		}
		
		form-control:first-child {
			margin-top: 0;
		}
		
		form-control [slot="prefix"] {
			margin-right: .5em;
		}
		
		form-control [slot="suffix"] {
			margin-left: .5em;
		}
	}

	.d-msg.custom-view {
		padding: 0;
		padding-top: .5em !important;
		color: inherit;
		min-height: 0;
    	overflow: auto;
	}

	.d-title:empty + .d-msg:not(:empty) {
		padding-top: 1em;
	}
	
	.d-btns {
		padding: .5rem;
	    // border-top: solid 1px rgba(0,0,0,.1);
	    display: flex;
	    justify-content: flex-end;
		
		> b-btn:not(:last-child) {
			margin-right: .5rem;
		}

		b-btn[text] {
			font-weight: bold;
		}
	}
	
	.d-btns:empty {
		padding-top: 0;
	}
	
	// reduce button padding when only buttons rendered
	> .d-title:empty ~ .d-msg:empty ~ .d-btns {
		padding: .25em;
	}
}

.dialog.sideicon {
	grid-template-areas: 
	'icon title'
	'icon msg'
	'icon btns';
	grid-template-columns: auto 1fr;
	
	.d-icon:not(:empty) {
		padding: .8em;
		box-sizing: border-box;
		background: var(--b-dialog-icon-bgd, rgba(0,0,0,.05));
		// height: 100%;
		border-radius: 4px 0 0 4px;
	}
	
	.d-title:empty ~ .d-msg:not(:empty) {
		padding-top: 1.5em;
	}
}

// aka "notif"
.messages .dialog {
	background: #fff;
	border-radius: 4px;
	font-size: 1rem;
	width: auto !important;

}

[type="actionsheet"] .dialog {
	width: auto !important;
	font-size: 1.2em;
	max-height: 100vh;
}

